# Fin

./: README.md  SKILL.md  pyproject.toml
artifacts/reproducible_demo/: 01_original_source.sol  02_contract_ir.json  03_execution_paths.json  04_solver_decisions.json  05_invariant_violations.json  06_minimized_counterexample.json  07_escalation_analysis.json  08_final_audit_report.md  README.md
docs/: design.md
examples/anchor/: vault.rs
examples/solidity/: OwnableVault.sol
scripts/: generate_demo_artifacts.py
src/contract_verifier/: __init__.py
src/contract_verifier/ai/: properties.py
src/contract_verifier/auditor/: __init__.py  interface.py
src/contract_verifier/escalation/: engine.py
src/contract_verifier/frontends/: anchor.py  base.py  solidity.py
src/contract_verifier/ir/: schema.py
src/contract_verifier/reporting/: report.py
src/contract_verifier/solver/: solver.py
src/contract_verifier/symbolic/: context.py  counterexamples.py  engine.py  invariants.py
src/contract_verifier/vulnerability/: __init__.py  patterns.py
tests/: test_auditor_skill_interface.py  test_counterexample_minimization.py  test_escalation_engine.py  test_invariant_evaluation.py  test_reproducible_demo_artifact.py  test_scaffold.py  test_solidity_end_to_end.py  test_solver_feasibility.py  test_symbolic_execution.py  test_vulnerability_pattern_engine.py
